--- a/github-markdown-dark.css
+++ b/github-markdown-dark.css
@@ -1,5 +1,9 @@
 /*dark*/
 
+html {
+  background-color: #0d1117;
+}
+
 .markdown-body {
   color-scheme: dark;
   -ms-text-size-adjust: 100%;
@@ -11,6 +15,7 @@
   font-size: 16px;
   line-height: 1.5;
   word-wrap: break-word;
+  padding-top: 2em;
 }
 
 .markdown-body .octicon {
